--- a/pom.xml
+++ b/pom.xml
@@ -121,10 +121,11 @@
       <version>0.0.20131108.vaadin1</version>
       <scope>compile</scope>
     </dependency>
-      <dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-websocket</artifactId>
-      </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+
 
     <dependency>
       <groupId>com.sun.mail</groupId>
