--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <optional>true</optional>
+      <version>1.18.36</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -121,11 +122,6 @@
       <version>0.0.20131108.vaadin1</version>
       <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter</artifactId>
-    </dependency>
-
 
     <dependency>
       <groupId>com.sun.mail</groupId>
@@ -137,13 +133,6 @@
       <artifactId>jakarta.mail</artifactId>
       <version>1.6.7</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-mail</artifactId>
-      <version>2.5.5</version>
-    </dependency>
-
   </dependencies>
 
   <build>
